<resources>
    <string name="app_name">MovieListOnFragments</string>
    <string name="movie_description">Movie description</string>
    <string name="checked_to_leave_your_comments">Checked to leave your comments</string>
    <string name="commit">Commit</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="movie_name">Movie name</string>
    <string name="short_description">Short description</string>
    <string name="invite">Invite</string>
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">Loading...</string>
    <string name="movie_tag_line">Movie tag line</string>
    <string name="release_date">Release date</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime</string>
    <string name="butget">Butget</string>
    <string name="revenue">Revenue</string>
    <string name="movies">Movies</string>
    <string name="favorite">Favorite</string>
    <string name="enter_the_name_of_movie_you_want_to_find">Enter the name of movie you want to find</string>
    <string name="find">Find</string>
    <string name="devider">/</string>
    <string name="vote_average">Vote average</string>
    <string name="vote_count">Vote count</string>
    <string name="popularity">Popularity</string>
</resources>